# Signal_Analyzer

./: .gitignore  README.md
.github/workflows/: build.yml
Signal_Analyzer/: CMakeLists.txt  customlistview.cpp  customlistview.h  dft.cpp  dft.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h
Signal_Analyzer/Release-build_ubuntu-latest/: .ninja_deps  .ninja_log  CMakeCache.txt  Signal_Analyzer  build.ninja  cmake_install.cmake
Signal_Analyzer/Release-build_ubuntu-latest/.qt/: QtDeploySupport.cmake
Signal_Analyzer/Release-build_ubuntu-latest/Signal_Analyzer_autogen/: deps
Signal_Analyzer/Release-build_ubuntu-latest/Signal_Analyzer_autogen/EWIEGA46WW/: moc_customlistview.cpp.d  moc_mainwindow.cpp.d  moc_qcustomplot.cpp.d
Signal_Analyzer/Release-build_windows-latest/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Signal_Analyzer/Release-build_windows-latest/.qt/: QtDeploySupport.cmake
Signal_Analyzer/Release-build_windows-latest/Signal_Analyzer_autogen/: deps
Signal_Analyzer/Release-build_windows-latest/Signal_Analyzer_autogen/EWIEGA46WW/: moc_customlistview.cpp.d  moc_mainwindow.cpp.d  moc_qcustomplot.cpp.d
Signal_Analyzer/buildubuntu-latest/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Signal_Analyzer/buildubuntu-latest/.qt/: QtDeploySupport.cmake
Signal_Analyzer/buildubuntu-latest/Signal_Analyzer_autogen/: deps
Signal_Analyzer/buildubuntu-latest/Signal_Analyzer_autogen/EWIEGA46WW/: moc_customlistview.cpp.d  moc_mainwindow.cpp.d  moc_qcustomplot.cpp.d
Signal_Analyzer/buildwindows-latest/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Signal_Analyzer/buildwindows-latest/.qt/: QtDeploySupport.cmake
Signal_Analyzer/buildwindows-latest/Signal_Analyzer_autogen/: deps
Signal_Analyzer/buildwindows-latest/Signal_Analyzer_autogen/EWIEGA46WW/: moc_customlistview.cpp.d  moc_mainwindow.cpp.d  moc_qcustomplot.cpp.d
